--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "ngx-infinite-scroll": "^0.6.1",
-    "ngx-paged-select": "^0.1.2",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.7",
+    "@angular/cli": "^1.6.2",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
