--- a/demo/.gitignore
+++ b/demo/.gitignore
@@ -1,5 +1,14 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# compiled output
+/dist
+/dist-server
+/tmp
+/out-tsc
+
+# dependencies
+/node_modules
+
 # IDEs and editors
 /.idea
 .project
@@ -16,11 +25,20 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
+
+# e2e
+/e2e/*.js
+/e2e/*.map
+
 # System Files
 .DS_Store
 Thumbs.db
-
-# Mac
-**/.DS_Store
-
-
