--- a/select/package.json
+++ b/select/package.json
@@ -33,7 +33,7 @@
     "@angular/common": "^5.2.9",
     "@angular/compiler": "^5.2.9",
     "@angular/compiler-cli": "^5.0.0",
-    "@angular/platform-browser": "^4.4.6",
+    "@angular/platform-browser": "^5.2.9",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@compodoc/compodoc": "^1.0.0-beta.10",
     "@types/jasmine": "2.5.53",
@@ -73,7 +73,8 @@
   },
   "dependencies": {
     "@angular/core": "^5.2.9",
-    "@angular/http": "^4.4.6",
+    "@angular/http": "^5.2.9",
+    "bootstrap": "^4.0.0",
     "ngx-infinite-scroll": "^0.8.3"
   }
 }
