--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-paged-select",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "",
   "repository": {
     "type": "git",
@@ -11,7 +11,7 @@
     "email": "Margi47@users.noreply.github.com"
   },
   "keywords": [
-    "angular", "dropdown", "paging"
+    "angular", "ngx", "typescript", "dropdown", "select", "paging", "combobox", "scrolling"
   ],
   "license": "MIT",
   "bugs": {
