readme and badges edited

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "email": "Margi47@users.noreply.github.com"
   },
   "keywords": [
-    "angular", "dropdown"
+    "angular",
+    "dropdown"
   ],
   "license": "MIT",
   "bugs": {
